--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,32 +1,48 @@
 .section-about {
-    background-image: linear-gradient(to right, rgba(#fff, .93), rgba(#e6e6e6, .05));
+    background-image: linear-gradient(to right, rgba($color-grey-light-2, 2), rgba($color-grey-light-2, .95));
     grid-column: 1/-1;
     grid-row: about-start/ about-end;
-    padding: 10rem 4rem;
+    padding: 5rem 2rem;
 
     display: grid;
-    grid-template-columns: 1fr 1100px 1fr;
+    grid-template-columns: 1fr 900px 1fr;
+
+    @media only screen and (max-width:$bp-largest) {
+        grid-template-columns: 1fr 100% 1fr;
+    }
+
 }
 
 .about {
     grid-column: 2/3;
+    text-align: center;
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    position: relative;
-
+    width: 80%;
 
     &-heading {
-        position: relative;
         font-size: 5rem;
-        font-weight: 600;
+        font-weight: 700;
         color: $color-grey-dark-1;
+        margin-bottom: 2rem;
+        position: relative;
+
+        @media only screen and (max-width:$bp-big) {
+            font-size: 4rem;
+        }
+
+        @media only screen and (max-width:$bp-small) {
+            font-size: 2.5rem;
+        }
 
         .about-span {
-            color: $color-grey-light-1;
+            font-weight: 500;
+            color: $color-secondary-dark;
         }
     }
 
@@ -34,15 +50,35 @@
         width: 30rem;
         position: absolute;
         top: 100%;
-        left: 45%;
+        left: 46%;
+
+        @media only screen and (max-width:$bp-big) {
+            width: 25rem;
+        }
+
+        @media only screen and (max-width:$bp-small) {
+            width: 17rem;
+        }
+
+        @media only screen and (max-width:$bp-smaller) {
+            display: none;
+        }
     }
 
     &-text {
         margin-top: 5rem;
         padding-bottom: 5rem;
         color: $color-grey-dark-1;
-        font-size: 2.5rem;
+        font-size: 2rem;
+
+        @media only screen and (max-width:$bp-big) {
+            font-size: 1.6rem;
+            margin-top: 3rem;
+        }
+
+        @media only screen and (max-width:$bp-small) {
+            font-size: 1.4rem;
+            margin-top: 2.5rem;
+        }
     }
-
-
 }
