--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,10 +1,17 @@
 .section-hero {
-    background-image: linear-gradient(to right, rgba($color-primary, .93), rgba($color-primary-dark, .93));
+    background-image: linear-gradient(to right, rgba($color-primary, 2), rgba($color-primary-light, .93)), url(../img/hero-image.svg);
+    background-size: cover;
+    background-position: center;
     grid-column: 1/-1;
     grid-row: header-start/ header-end;
-    padding: 10rem 4rem;
+    padding: 4rem;
     display: grid;
-    grid-template-columns: 1fr 1100px 1fr;
+    grid-template-columns: 1fr 900px 1fr;
+
+
+    @media only screen and (max-width:$bp-largest) {
+        grid-template-columns: 1fr 100% 1fr;
+    }
 }
 
 .hero {
@@ -12,64 +19,210 @@
 
     display: grid;
     grid-template-columns: 45% 55%;
-
+    gap: 1.5rem;
     align-items: center;
     justify-content: center;
+    padding-top: 2rem;
+
+    @media only screen and (max-width:$bp-larger) {
+        grid-template-columns: repeat(2, 50%);
+    }
+
+    @media only screen and (max-width:$bp-big) {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(2, min-content);
+    }
 
     &-text {
+
+        @media only screen and (max-width:$bp-big) {
+            text-align: center;
+            display: grid;
+            justify-content: center;
+        }
+
         &-main {
-            font-size: 5rem;
-            font-weight: 600;
-            color: $color-grey-dark-1;
+            font-size: 5.2rem;
+            line-height: 1.1;
+            font-weight: 700;
+            color: $color-grey-light-1;
+            margin-bottom: 2.5rem;
+
+            @media only screen and (max-width:$bp-larger) {
+                font-size: 4.4rem;
+            }
+
+            @media only screen and (max-width:$bp-big) {
+                font-size: 5.2rem;
+                margin-bottom: 1.5rem;
+                grid-row: 1/2;
+            }
         }
 
         &-mini {
-            font-size: 2.8rem;
-            font-weight: 600;
+            font-size: 2rem;
+            line-height: 1.2;
+            font-weight: 500;
+            color: $color-grey-light-2;
+
+            @media only screen and (max-width:$bp-largest) {
+                font-size: 1.85rem;
+            }
+
+            @media only screen and (max-width:$bp-larger) {
+                font-size: 1.6rem;
+            }
+        }
+    }
+
+    &-btn {
+
+        @media only screen and (max-width:$bp-big) {
+            text-align: center;
+            display: grid;
+            justify-content: center;
+        }
+
+        &-text {
+            font-size: 1.2rem;
+            font-weight: 500;
+            color: $color-grey-light-2;
+            margin: 1rem 0 2rem 0;
+            width: 70%;
+
+            @media only screen and (max-width:$bp-big) {
+                margin: 2rem 0 1rem 0;
+                text-align: center;
+                justify-self: center;
+            }
+        }
+
+        &-login,
+        &-reg {
+            background-color: $color-grey-dark-1;
             color: $color-grey-light-1;
-            margin-bottom: 2rem;
+            font-size: 1.6rem;
+            font-weight: 600;
+            font-family: $font-primary;
+            text-transform: uppercase;
+            cursor: pointer;
+            padding: 1.2rem 2rem;
+            border-radius: 5rem;
+            transition: all 0.5s;
+            border: none;
+            box-shadow: inset 0 0 0 1px $color-secondary-light;
+
+            &:not(:last-child) {
+                margin-right: 1.5rem;
+
+                @media only screen and (max-width:$bp-largest) {
+                    margin-bottom: 1.5rem;
+                }
+            }
+
+            @media only screen and (max-width:$bp-largest) {
+                font-size: 1.4rem;
+            }
+
+            @media only screen and (max-width:$bp-larger) {
+                font-size: 1.2rem;
+            }
+
+            &:hover {
+                transform: scale(1.1);
+            }
+        }
+
+        &-reg {
+            background-color: #fff;
+            color: $color-grey-dark-1;
+            box-shadow: inset 0px 0px 0px 2px $color-grey-dark-1;
+            transition: all 0.5s;
+
+            &:hover {
+                transform: scale(1.1);
+                background-color: $color-secondary-light;
+            }
         }
     }
 
     &-image {
+        @media only screen and (max-width:$bp-big) {
+            text-align: center;
+            justify-content: center;
+            padding-top: 4rem;
+        }
+
 
         &_image {
-            height: 60rem
+            height: 60rem;
+
+            @media only screen and (max-width:$bp-larger) {
+                height: 50%
+            }
+
+            @media only screen and (max-width:$bp-big) {
+                width: 70%;
+
+            }
         }
     }
 }
 
-
-.delivered-meals {
+.delivered-emails {
     display: flex;
-    margin-top: 8rem;
+    margin-top: 4rem;
     align-items: center;
     gap: 1.6rem;
-}
 
-.delivered-imgs {
-    display: flex;
-}
 
-.delivered-imgs img {
-    height: 4.8rem;
-    width: 4.8rem;
-    border-radius: 50%;
-    margin-right: -1.6rem;
-    border: 3px solid #fdf2e9;
-}
+    @media only screen and (max-width:$bp-big) {
+        margin-top: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-.delivered-imgs img:last-child {
-    margin: 0;
-}
+    .delivered-imgs {
+        display: flex;
 
-.delivered-text {
-    font-size: 1.8rem;
-    font-weight: 600;
-    color: $color-grey-dark-1;
-}
+    }
 
-.delivered-text span {
-    color: $color-grey-light-1;
-    font-weight: 700;
+    .delivered-imgs img {
+        height: 3.8rem;
+        width: 3.8rem;
+        border-radius: 50%;
+        margin-right: -1.6rem;
+        border: 2px solid #fdf2e9;
+        transition: all 0.3s;
+
+        @media only screen and (max-width:$bp-larger) {
+            height: 3.4rem;
+            width: 3.4rem;
+            margin-right: -1.4rem;
+        }
+
+        &:last-child {
+            margin: 0;
+        }
+
+        &:hover {
+            transform: scale(1.1);
+        }
+    }
+
+    .delivered-text {
+        font-size: 1.4rem;
+        font-weight: 600;
+        color: $color-secondary-light ;
+
+        @media only screen and (max-width:$bp-larger) {
+            font-size: 1.2rem;
+        }
+    }
+
+    .delivered-text span {
+        color: $color-grey-light-1;
+        font-weight: 700;
+    }
 }
