--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 
 @import "sidebar";
 @import "header";
-@import "realtors";
+@import "mobile-nav";
 @import "features";
 @import "story";
 @import "about";
