--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,9 +8,12 @@
     display: grid;
     grid-template-columns: 1fr 900px 1fr;
 
-
     @media only screen and (max-width:$bp-largest) {
         grid-template-columns: 1fr 100% 1fr;
+    }
+
+    @media only screen and (max-width:$bp-big) {
+        grid-template-rows: 100%;
     }
 }
 
@@ -24,21 +27,23 @@
     justify-content: center;
     padding-top: 2rem;
 
+
     @media only screen and (max-width:$bp-larger) {
         grid-template-columns: repeat(2, 50%);
     }
 
     @media only screen and (max-width:$bp-big) {
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, min-content);
+        grid-template-rows: 70vh max-content;
+        margin-top: 3rem;
+        padding: 9rem 0;
     }
 
     &-text {
 
         @media only screen and (max-width:$bp-big) {
+            grid-row: 1/2;
             text-align: center;
-            display: grid;
-            justify-content: center;
         }
 
         &-main {
@@ -53,10 +58,18 @@
             }
 
             @media only screen and (max-width:$bp-big) {
-                font-size: 5.2rem;
+                font-size: 8.5rem;
                 margin-bottom: 1.5rem;
                 grid-row: 1/2;
             }
+
+            @media only screen and (max-width:$bp-medium) {
+                margin-bottom: 2rem;
+            }
+
+            // @media only screen and (max-width:$bp-small) {
+            //     font-size: 5.4rem;
+            // }
         }
 
         &-mini {
@@ -72,28 +85,49 @@
             @media only screen and (max-width:$bp-larger) {
                 font-size: 1.6rem;
             }
+
+            @media only screen and (max-width:$bp-big) {
+                font-size: 4rem;
+            }
+
+            @media only screen and (max-width:$bp-medium) {
+                // font-size: 2.8rem;
+                padding-bottom: 2rem;
+            }
+
+            @media only screen and (max-width:$bp-small) {
+                // font-size: 2rem;
+                font-weight: 400;
+                padding-bottom: 2rem;
+            }
         }
     }
 
     &-btn {
 
-        @media only screen and (max-width:$bp-big) {
-            text-align: center;
-            display: grid;
-            justify-content: center;
-        }
-
         &-text {
-            font-size: 1.2rem;
+            font-size: 1.4rem;
             font-weight: 500;
             color: $color-grey-light-2;
             margin: 1rem 0 2rem 0;
-            width: 70%;
 
             @media only screen and (max-width:$bp-big) {
+                font-size: 3rem;
+                text-align: center;
                 margin: 2rem 0 1rem 0;
                 text-align: center;
-                justify-self: center;
+                display: grid;
+                justify-content: center;
+            }
+
+            @media only screen and (max-width:$bp-medium) {
+                // font-size: 2rem;
+                font-weight: 400;
+                margin-bottom: 2rem;
+            }
+
+            @media only screen and (max-width:$bp-small) {
+                // font-size: 1.5rem;
             }
         }
 
@@ -128,6 +162,14 @@
                 font-size: 1.2rem;
             }
 
+            @media only screen and (max-width:$bp-big) {
+                font-size: 2.4rem;
+            }
+
+            @media only screen and (max-width:$bp-medium) {
+                // font-size: 1.4rem;
+            }
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -149,7 +191,6 @@
     &-image {
         @media only screen and (max-width:$bp-big) {
             text-align: center;
-            justify-content: center;
             padding-top: 4rem;
         }
 
@@ -162,8 +203,11 @@
             }
 
             @media only screen and (max-width:$bp-big) {
-                width: 70%;
+                width: 80%;
+            }
 
+            @media only screen and (max-width:$bp-small) {
+                width: 100%;
             }
         }
     }
@@ -171,44 +215,14 @@
 
 .delivered-emails {
     display: flex;
-    margin-top: 4rem;
     align-items: center;
     gap: 1.6rem;
 
 
     @media only screen and (max-width:$bp-big) {
-        margin-top: 2rem;
         display: flex;
         justify-content: center;
         align-items: center;
-    }
-
-    .delivered-imgs {
-        display: flex;
-
-    }
-
-    .delivered-imgs img {
-        height: 3.8rem;
-        width: 3.8rem;
-        border-radius: 50%;
-        margin-right: -1.6rem;
-        border: 2px solid #fdf2e9;
-        transition: all 0.3s;
-
-        @media only screen and (max-width:$bp-larger) {
-            height: 3.4rem;
-            width: 3.4rem;
-            margin-right: -1.4rem;
-        }
-
-        &:last-child {
-            margin: 0;
-        }
-
-        &:hover {
-            transform: scale(1.1);
-        }
     }
 
     .delivered-text {
@@ -217,7 +231,11 @@
         color: $color-secondary-light ;
 
         @media only screen and (max-width:$bp-larger) {
-            font-size: 1.2rem;
+            font-size: 1.5rem;
+        }
+
+        @media only screen and (max-width:$bp-big) {
+            font-size: 3rem;
         }
     }
 
