--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,4 +1,4 @@
-.sticky .navigation {
+.sticky .navigation-header {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -12,5 +12,5 @@
 }
 
 .sticky .section-hero {
-    // margin-top: 7.6rem;
+    margin-top: 7.6rem;
 }
