--- a/sass/_mobile-nav.scss
+++ b/sass/_mobile-nav.scss
@@ -7,8 +7,8 @@
 }
 
 .icon-mobile-nav {
-    height: 5.8rem;
-    width: 5.8rem;
+    height: 4.8rem;
+    width: 4.8rem;
     color: $color-grey-light-1;
 }
 
@@ -44,8 +44,10 @@
         border-top-left-radius: 30px;
         border-left: 1px solid #fff;
 
+        padding-top: 20rem;
+
         display: flex;
-        align-items: center;
+        align-items: start;
         justify-content: center;
         transition: all .2s ease-in;
         opacity: 0;
